--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <my-app>Loading SoCal Cleanings L.L.C ...</my-app>
   </body>
 </html>
